--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@types/express": "^5.0.3",
+    "express": "^5.1.0",
     "firebase": "^12.4.0",
     "framer-motion": "^12.23.24",
+    "jspdf": "^3.0.3",
     "lucide-react": "^0.546.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hot-toast": "^2.6.0",
     "react-router-dom": "^6.26.1"
   },
   "devDependencies": {
