--- a/package.json
+++ b/package.json
@@ -14,13 +14,19 @@
     "@google/generative-ai": "^0.24.1",
     "@heroicons/react": "^2.2.0",
     "@types/express": "^5.0.3",
+    "argon2": "^0.44.0",
     "cheerio": "^1.1.2",
     "classnames": "^2.5.1",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.1.0",
     "firebase": "^12.4.0",
+    "firebase-admin": "^12.5.0",
     "framer-motion": "^12.23.24",
+    "helmet": "^8.1.0",
+    "jsonwebtoken": "^9.0.2",
     "jspdf": "^3.0.3",
     "lucide-react": "^0.546.0",
     "mongoose": "^8.19.1",
@@ -33,7 +39,8 @@
     "react-select": "^5.10.2",
     "react-toastify": "^11.0.5",
     "socket.io": "^4.8.1",
-    "socket.io-client": "^4.8.1"
+    "socket.io-client": "^4.8.1",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
