--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "test:transactions": "node scripts/testTransactionSystem.js",
     "test:wallet-balance-fix": "node scripts/testWalletBalanceFix.js",
     "cleanup:admin": "node scripts/cleanupAdminFiles.js",
-    "verify:admin": "node scripts/verifyAdminPanel.js"
+    "verify:admin": "node scripts/verifyAdminPanel.js",
+    "seed:services": "node server/scripts/seed-services.js"
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
