--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@tanstack/react-query-devtools": "^5.90.2",
     "@types/express": "^5.0.3",
     "argon2": "^0.44.0",
+    "axios": "^1.13.1",
     "cheerio": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "classnames": "^2.5.1",
@@ -57,6 +58,7 @@
     "recharts": "^3.3.0",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
+    "sweetalert2": "^11.26.3",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^13.0.0"
